@@ -435,7 +435,6 @@
 #define IDS_IMPORT_TT_MODULENAMECHECK   1510
 #define IDS_IMPORT_TT_TEMPFILES         1511
 #define IDS_PROC_RENAME                 1550
-#define IDS_PROC_NEWNAM                 1551
 #define IDS_PROC_NEWNAME                1551
 #define IDS_REPOBROWSE_SAVEAS           1600
 #define IDS_REPOBROWSE_SHOWLOG          1601
@@ -457,6 +456,7 @@
 #define IDS_REPOBROWSE_COPYTOWC_LINE1   1644
 #define IDS_REPOBROWSE_COPYTOWC_LINE2   1645
 #define IDS_REPOBROWSE_INITWAIT         1660
+#define IDS_REPOBROWSE_MULTIIMPORT      1670
 #define IDS_ABOUTVERSION                1700
 #define IDS_ABOUTVERSIONBOX             1701
 #define IDS_DLGTITLE_ADD_DIFF_TOOL      1750
@@ -493,6 +493,7 @@
 #define IDS_INPUT_MKDIRLOGMSG           2005
 #define IDS_INPUT_MOVELOGMSG            2006
 #define IDS_INPUT_ADDFOLDERLOGMSG       2007
+#define IDS_INPUT_ADDFILEFOLDERMSG      2008
 #define IDS_BLAME_PROGRESSTITLE         2100
 #define IDS_BLAME_PROGRESSINFO          2101
 #define IDS_BLAME_PROGRESSCANCEL        2102
